# web-sw-cor24-smalltalk

./: .gitignore  CHANGES.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
assets/: basic.p24
docs/: ai_agent_instructions.md
pages/: index.html  ui-11535a7b5a3c4a6c.css  web-sw-cor24-smalltalk-158b92232dc04f7c_bg.wasm  web-sw-cor24-smalltalk-6ed561e490fb86db_bg.wasm  web-sw-cor24-smalltalk-9a767e6809d20111.js  web-sw-cor24-smalltalk-9a767e6809d20111_bg.wasm  web-sw-cor24-smalltalk-c74761e4198b9744_bg.wasm  web-sw-cor24-smalltalk-ecddad9d90e26491_bg.wasm
scripts/: build-pages.sh  serve.sh  vendor-artifacts.sh
src/: config.rs  demos.rs  lib.rs  main.rs  runner.rs  ui.css
