[package]
name = "web-sw-cor24-smalltalk"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Browser-based COR24 Smalltalk v0 (Tinytalk) sandbox running on the COR24 BASIC v1 interpreter on the COR24 p-code VM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pa24r = { path = "../sw-cor24-pcode/assembler" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlElement",
    "KeyboardEvent",
] }
gloo = "0.11"
console_error_panic_hook = "0.1"



[profile.release]
opt-level = "z"
lto = true
